# german-poll-analyzer

./: Pipfile  README.md  pyproject.toml
src/poll_analyzer/: cli.py  coalition_analysis.py  config.py  data_fetcher.py  data_parser.py  plotter.py
